# Lynceus

./: .gitignore  README.md  environment.yml  pyproject.toml
src/lynceus/: __main__.py  config.py  dynamics.py  filters.py  metrics.py  plotting.py  scenarios.py  sensors.py  tracking.py
